Revert "Fix comment modal double scroll and sticky input"

--- a/crunevo/static/css/feed.css
+++ b/crunevo/static/css/feed.css
@@ -1318,11 +1318,6 @@ select:focus {
   margin-bottom: 20px;
 }
 
-.comment-modal .comments-list {
-  max-height: none;
-  overflow: visible;
-}
-
 .comment-item {
   padding: 8px 0;
 }
